# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20231029222130_create_subscriptions_table.sql  20240416130509_add_status_to_subscriptions.sql  20240416131136_make_status_not_null_in_subscriptions.sql  20240416131822_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
