[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
claims = "0.7"
validator = { version = "0.16" }
# We are not using fake >= 2.4 because it relies on rand 0.8 which has been recently released and
# it is not yet used by quickcheck (solved in its upcoming 1.0 release)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features = ["std_rng"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
